<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>eu.eu-emi.security</groupId>
	<artifactId>canl</artifactId>
	<packaging>jar</packaging>
	<version>2.8.4-SNAPSHOT</version>
	<name>canl</name>

	<description>Common X.509 Authentication Library</description>
	<inceptionYear>2012</inceptionYear>
	<organization>
		<name>Unity Identity Management</name>
		<url>https://github.com/unity-idm</url>
	</organization>
	<url>https://github.com/unity-idm/tanl</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<excludedJunitGroups>eu.emi.security.authn.x509.RiskyIntegrationTests</excludedJunitGroups>
		<bouncycastle.version>1.85</bouncycastle.version>
	</properties>


	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/unity-idm/tanl/issues</url>
	</issueManagement>


	<developers>
		<developer>
			<name>Krzysztof Benedyczak</name>
			<organization>ICM Warsaw University</organization>
			<organizationUrl>http://www.icm.edu.pl</organizationUrl>
		</developer>
	</developers>

	<contributors>
		<contributor>
			<name>Joni Hahkala</name>
			<organization>Helsinki Institute of Physics/CERN</organization>
			<organizationUrl>http://cern.ch</organizationUrl>
		</contributor>
		<contributor>
			<name>Vincenzo Ciaschini</name>
			<organization>INFN-CNAF</organization>
			<organizationUrl>http://www.cnaf.infn.it</organizationUrl>
		</contributor>
	</contributors>

	<licenses>
		<license>
			<name>BSD</name>
			<comments>License file is distributed with the binary and source packages.</comments>
		</license>
	</licenses>

	<prerequisites>
		<maven>3.1.1</maven>
	</prerequisites>

	<scm>
		<connection>scm:git:https://github.com/unity-idm/tanl.git</connection>
		<url>https://github.com/unity-idm/tanl</url>
		<developerConnection>scm:git:ssh://git@github.com/unity-idm/tanl.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<distributionManagement>
		<repository>
			<id>sonatype-nexus-staging</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>


	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.hamcrest</groupId>
					<artifactId>hamcrest-core</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.27.7</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest</artifactId>
			<version>3.0</version>
			<scope>test</scope>
		</dependency>

		
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcpkix-jdk18on</artifactId>
			<version>${bouncycastle.version}</version>
		</dependency>
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcprov-jdk18on</artifactId>
			<version>${bouncycastle.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.22.0</version>
		</dependency>
	</dependencies>


	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.18</version>
				<configuration>
					<argLine>-Xmx64m</argLine>
					<excludedGroups>${excludedJunitGroups}</excludedGroups>
					<groups>${includedJunitGroups}</groups>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.4</version>
				<inherited>true</inherited>
				<executions>
					<execution>
						<id>build-source-jar</id>
						<phase>verify</phase>
						<!-- makes sure the source jar is build before install or compile -->
						<goals>
							<goal>jar</goal>
						</goals>
						<inherited>true</inherited>
					</execution>
				</executions>
				<configuration>
					<attach>true</attach>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.3</version>
				<configuration>
					<source>1.8</source>
					<additionalparam>-Xdoclint:none</additionalparam>
				</configuration>
				<inherited>true</inherited>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- workaround for gnupg hanging while invoked from the release plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.1</version>
				<configuration>
					<mavenExecutorId>forked-path</mavenExecutorId>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.13</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>sonatype-nexus-staging</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.1.1</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.2</version>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
						<maxmem>256M</maxmem>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>2.5</version>
					<configuration>
						<finalName>${project.name}-${project.version}</finalName>
						<archive>
							<manifestEntries>
								<Specification-Title>${project.name}</Specification-Title>
								<Specification-Vendor>${project.organization.name}</Specification-Vendor>
								<Specification-Version>${project.version}</Specification-Version>
								<Implementation-Title>${project.name}</Implementation-Title>
								<Implementation-Vendor-Id>${project.organization.url}</Implementation-Vendor-Id>
								<Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
								<Implementation-Version>${project.version}</Implementation-Version>
							</manifestEntries>
						</archive>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.8</version>
				<configuration>
					<source>1.8</source>
				</configuration>
				<reportSets>
					<reportSet>
						<id>default</id>
						<reports>
							<report>javadoc</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>2.8.1</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>summary</report>
							<report>project-team</report>
							<report>issue-tracking</report>
							<report>license</report>
							<report>scm</report>
							<report>dependencies</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>

	<profiles>
		<!-- Profile allowing to run the risky tests -->
		<profile>
			<id>riskyTests</id>
			<properties>
				<includedJunitGroups>eu.emi.security.authn.x509.RiskyIntegrationTests</includedJunitGroups>
				<excludedJunitGroups />
			</properties>
		</profile>

	</profiles>
</project>
